# concurrent-c

./: .gitignore  Atom.h  AtomTest.cpp  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  check  concurrent.cpp  dox  test
include/: Atom.h
tests/: AtomTest.cpp  concurrent.cpp
